# instacall_monitoring_tool

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alerts.py  async_fetch.py  auth.py  balance_alert.py  config.py  display.py  docker-compose.yml  export.py  health.py  marginmonitor.db  menu.py  monitor.py  notifications.py  persistence.py  profiles.json  pyproject.toml  quick.py  requirements.txt  retry.py  run_monitor.bat  scrapers.py  settings.json  setup_and_run.bat  webadmin.py
templates/: base.html  dashboard.html  profiles.html  settings.html
tests/: test_alerts.py  test_config.py  test_display.py  test_persistence.py  test_retry.py  test_scrapers.py
